  - capture - deal with bad utf8/puny in dns and altnames
  - viewer - warn at starting about missing ./vueapp/dist/index.html
  - viewer - can now use db:<dbFieldName> in expressions (PR #1463)
  - viewer - if esAdminUsers isn't set, ES Admin tab now shows up for admins
  - viewer - ES Nodes can display molochzone attribute now
  - viewer - fixed some Users tab issues

2.3.1 2020/05/27
  - all - Lots of changes to support node 12 in the future (thanks rnbwdsh)
  - viewer - fix bug where the next query after an empty query might hang the UI
  - viewer - use the same eslint as the UI & parliament, lots of lines changed
  - viewer - can now modify or delete a view from the popup
  - viewer - fixed so non admins can cancel their searches again
  - viewer - fixed columns not always loading with views
  - viewer - when user creates a view it will auto switch
  - viewer - does basic ip validation in queries
  - viewer - fixed users tab header being hidden
  - capture - fixed out of bounds read in smtp parsing
  - capture - Lowered the default number of ES retries to 2, added new
              esMaxRetries setting
  - wise - upgraded sqlite version and changed from hashtable to Map (thanks rnbwdsh)
  - db.pl - The info command will now display estimate for how many days can be stored

2.3.0 2020/05/06
  - release - CyberChef 9.16.2, node 10.20.1, daq 2.0.7
  - viewer - set content-type for cyberchef files
  - viewer - add support for caTrustFile to addUser and multies
  - viewer - can now select to show any integer field in graphs, set on the settings page
  - viewer - graph/header can now be pinned to not scroll off page
  - viewer - most navbars can be collapsed and hidden
  - viewer - mouse over in graphs now show total values too
  - viewer - fixed left/right keys not working in search bar after visiting stats page
  - viewer - support cancel for multies
  - viewer - cleaned up some of the Help docs
  - capture - new parsers arp, bgp, igmp, isis, lldp, ospf, pim, 